# ds-u2-actividad-1-listasenlazadassimples-ELIASDEJESUSZUNIGADELEON

./: CMakeLists.txt  README.md  main.cpp  platformio.ini
arduino/esp32_sensor_simulator/: esp32_sensor_simulator.ino
html/: _lista_gestion_8h.html  _lista_gestion_8h.js  _lista_gestion_8h_source.html  _lista_sensor_8h.html  _lista_sensor_8h_source.html  _sensor_base_8h.html  _sensor_base_8h_source.html  _sensor_presion_8h.html  _sensor_presion_8h_source.html  _sensor_temperatura_8h.html  _sensor_temperatura_8h_source.html  _serial_reader_8h.html  _serial_reader_8h_source.html  annotated.html  annotated_dup.js  class_lista_gestion-members.html  class_lista_gestion.html  class_lista_gestion.js  class_lista_sensor-members.html  class_lista_sensor.html  class_lista_sensor.js  class_sensor_base-members.html  class_sensor_base.html  class_sensor_base.js  class_sensor_presion-members.html  class_sensor_presion.html  class_sensor_presion.js  class_sensor_temperatura-members.html  class_sensor_temperatura.html  class_sensor_temperatura.js  class_serial_reader-members.html  class_serial_reader.html  class_serial_reader.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  (+16 more)
html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  (+12 more)
include/: ListaGestion.h  ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SerialReader.h
src/: main.cpp
